# inklingreader

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  TODO.org  aclocal.m4  configure  configure.ac
doc/: Doxyfile  DoxygenLayout.xml  changing-defaults.texi  command-line.texi  custom.css  gui.texi  inklingreader.texi  installation.texi  usage.texi
res/: inklingonline.desktop  inklingreader.desktop
res/inkscape-extension/: wpi2svg-ext.py  wpi_input.inx
src/: main.c
src/converters/: README  cairo_svg.c  cairo_svg.h  csv.c  csv.h  json.c  json.h  pdf.c  pdf.h  png.c  png.h  svg.c  svg.h
src/datatypes/: README  clock.h  configuration.c  configuration.h  coordinate.h  element.h  metadata.h  pressure.h  statistics.h  stroke.h  tilt.h
src/gui/: mainwindow.c  mainwindow.h  mainwindow_sig.c  mainwindow_sig.h
src/high/: configuration.c  configuration.h  conversion.c  conversion.h
src/optimizers/: point-reduction.c  point-reduction.h  straight_lines.c  straight_lines.h
src/parsers/: wpi.c  wpi.h
src/pixmaps/: no-preview.xpm
src/usb/: online-mode.c  online-mode.h
